added OpenAI API timeout